# software_simple_qp

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
include/: QPSolver.h  QPSolver.tpp
src/: QPSolver.cpp  test.cpp
test/: test.cpp
